# RAG_based_document_search

./: README.md  pyproject.toml  requirements.txt
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/nodes/: nodes.py  reactnode.py
src/vectorstore/: vectorstore.py
